--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "ebb-and-flow",
+  "name": "Postcss-presentation",
   "version": "1.0.0",
-  "description": "Ebb And Flow Pictures website",
+  "description": "Postcss-presentation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/mccambridge/ebbandflow"
+    "type": "",
+    "url": ""
   },
-  "author": "Sean McCambridge",
-  "license": "UNLICENSED",
+  "author": "",
+  "license": "",
   "bugs": {
-    "url": "https://github.com/mccambridge/ebbandflow/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/mccambridge/ebbandflow",
+  "homepage": "",
   "devDependencies": {
     "gulp-babel": "^6.1.1"
   },
@@ -33,7 +33,6 @@
     "gulp-uglify": "^1.5.1",
     "gulp-webpack": "^1.5.0",
     "lost": "^6.6.2",
-    "normalize.css": "^3.0.3",
     "precss": "^1.3.0"
   }
 }
